# overpass-nlmaps

./: CMakeLists.txt  INSTALL.md  Makefile_db_scripts  README.md
cfg_nlmaps/: README_cfg_nlmaps.md  cfg_nlmaps
cgi-bin/: interpreter  timestamp
src/: Makefile.am  config.h.in~
src/makefiles/: Makefile
src/overpass_api/core/: index_computations.h  settings.cc  type_area.h
src/overpass_api/dispatch/: osm3s_query.cc  osm3s_query_nlmaps.cc  osm3s_query_nlmaps.h  scripting_core.cc  scripting_core.h
src/overpass_api/frontend/: map_ql_parser.cc  print_target.cc  user_interface.cc  user_interface.h
src/overpass_api/nlmaps/: interpret.cc  linearise.cc  nlmaps_query.h  query_db.cc
src/overpass_api/statements/: area_query.cc  area_query.h  around.cc  around.h  bbox_query.cc  bbox_query.h  changed.cc  changed.h  coord_query.cc  coord_query.h  difference.cc  difference.h  foreach.cc  foreach.h  id_query.cc  id_query.h  item.cc  item.h  make_area.cc  make_area.h  map_to_area.cc  map_to_area.h  meta_collector.h  newer.cc  newer.h  osm_script.cc  osm_script.h  pivot.cc  pivot.h  polygon_query.cc  polygon_query.h  print.cc  print.h  query.cc  query.h  recurse.cc  recurse.h  statement.cc  statement.h  statement_dump.cc  (+5 more)
src/template_db/: file_blocks.h
